# DotCompute

./: .editorconfig  .gitignore  2  ATTENTION-POINTS-IMPLEMENTATION.md  BRIDGE_ARCHITECTURE.md  CHANGELOG.md  CI-CD-OPTIMIZATION-SUMMARY.md  CLAUDE.md  CLEANUP_REMOVAL_LIST.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREATED_DOCUMENTATION_MANIFEST.txt  CUDA_NVRTC_UPGRADE_SUMMARY.md  CoverageAnalysisReport.md  DEPLOYMENT-SUMMARY.md  DOTCOMPUTE-CHEATSHEET.md  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  Directory.PublicApi.props  Directory.Test.props  DotCompute.sln  DotCompute.sln.backup  FINAL-STATUS-REPORT.md  FINAL_COMPLETION_HANDOFF.md  GitVersion.yml  Memory_Interface_Fix_Summary.md  NativeAotSimdTest.csproj  PHASE4_COMPLETION_SUMMARY.md  PerformanceAnalysisReport.md  PerformanceValidation.csproj  Phase2_Completion_Report.md  Phase2_Final_Completion_Report.md  Phase3_Preparation_Complete_Report.md  QA-VALIDATION-REPORT.md  README.md  RELEASE_NOTES_v0.2.0-alpha.md  ROADMAP.md  Solution_Error_Analysis_Report.md  (+59 more)
.github/: CODEOWNERS  branch-protection.json  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/scripts/: build.ps1  build.sh  quality-check.sh  release.sh
.github/templates/: issue_template_bug.md  issue_template_feature.md  pull_request_template.md
.github/workflows/: README.md  alpha-release.yml  ci-enhanced.yml  ci-tests.yml  ci.yml  codeql.yml  coverage-ci.yml  deploy-docs.yml  hardware-tests.yml  main.yml  (+7 more)
CudaTest/: CudaTest.csproj  Program.cs
api/: index.md  toc.yml
arm-test/: Program.cs
backups/random-20251022-112430/src/Backends/DotCompute.Backends.Metal/native/: CMakeLists.txt  MetalNative.cs  build.sh
backups/random-20251022-112430/src/Backends/DotCompute.Backends.Metal/native/include/: DCMetalInterop.h
backups/random-20251022-112430/src/Backends/DotCompute.Backends.Metal/native/src/: DCMetalDevice.mm
ci/: nuget.config
coverage-reports-current/: summary.html
docs/: API-Reference.md  API.md  API_REFERENCE.md  ARCHITECTURE.md  Architecture.md  BUFFER_VIEW_MIGRATION.md  BUG_ZERO_DEVICES_FIX.md  BUILD_TROUBLESHOOTING.md  CA1848-CONVERSION-SUMMARY.md  CA1848-FINAL-SUMMARY.md  CA1848-FIX-GUIDE.md  CA1848-INDEX.md  CA1848-REMAINING-CONVERSIONS.md  CA2012_Wave1_Execution_Report.md  CASTLE_CORE_FIX.md  CODEBASE_COMPLETENESS_ASSESSMENT.md  CODE_QUALITY_ASSESSMENT_2025_11_05.md  COMPILATION_FIXES_2025-11-03.md  COMPREHENSIVE_TESTING_STRATEGY.md  CS0117-FIX-PLAN.md  CUDA_Backend_Class_Designs.md  CUDA_Backend_Implementation_Plan.md  CUDA_Backend_Implementation_Summary.md  CUDA_PInvoke_Specifications.md  CUDA_Testing_Strategy.md  ConsolidationSummaryReport.md  DEVELOPMENT.md  DEVICE_ENUMERATION_FIX_COMPLETE.md  DEVICE_ENUMERATION_TEST_RESULTS.md  DOCUMENTATION_REVIEW_v0.3.0-rc1.md  DOCUMENTATION_SUMMARY.md  DotCompute-0.2.0-Plan.md  DotComputeCrossProjectConsolidationReport.md  DuplicateClassMapping.cs  ERROR-ANALYSIS-REPORT.md  ERROR-FIX-INDEX.md  Examples.md  FOLDER_NAMING_IMPLEMENTATION.md  GETTING_STARTED.md  GITHUB_PAGES_SETUP.md  (+165 more)
docs-old/: ADVANCED_LINEAR_ALGEBRA.md  DynamicKernelGeneration.md  LINQ_to_GPU_Implementation.md  NAMING_SCHEMA.md  NuGet_Plugin_Security_Implementation_Summary.md  OPTIMIZATION_ROADMAP.md  PRODUCTION-READINESS.md  SOLUTION_REORGANIZATION_GUIDE.md  TESTING-GUIDE.md  TESTING_STRATEGY.md
examples/: AdvancedLinearAlgebraExample.cs
hive/: consolidation-plan.md  obsolete-code.md
performance-test/: PerformanceTest.csproj  Program.cs
plugins/backends/DotCompute.Backends.Metal/native/: CMakeLists.txt
plugins/backends/DotCompute.Backends.Metal/native/include/: DCMetalInterop.h
scripts/: PUBLISH_README.md  QUICK_PUBLISH.md  README.md  Sign-NuGetPackages.ps1  Sign-WindowsApp.ps1  add-fluentassertions-using.sh  analyze-ca-warnings.sh  analyze-test-results.sh  build-verification.sh  check-coverage-thresholds.sh  clean-duplicate-using.sh  continuous-monitor.sh  continuous-validation-pipeline.sh  convert-to-logger-delegates.ps1  coverage.sh  create-benchmark-baseline.bat  create-benchmark-baseline.sh  detect-regressions.sh  disable-doc-generation.sh  establish-test-baseline.sh  find-cs1998.sh  fix-alpha-build.sh  fix-build-errors.sh  fix-build-for-alpha.sh  fix-ca2213-template.cs  fix-project-references-post-reorganization.sh  fix_namespaces.py  generate-coverage-report.sh  generate-coverage.sh  hive-monitor.sh  hive-status-report.sh  migrate-fluentassertions.sh  migrate-to-consolidated-memory.ps1  monitor-build.sh  monitor-warnings.sh  namespace-alignment-analyzer.ps1  namespace-alignment-analyzer.sh  package-verification.sh  pre-commit-warning-check.sh  publish-packages.ps1  (+37 more)
src/: Directory.Build.props  Directory.Packages.props  global.json
test-reports/: comprehensive-test-status.md
tests/: CI-CD-SUMMARY.md  Directory.Build.props  Directory.Build.targets  DotCompute.Generators.Tests.csproj  EnhancedCudaGeneratorTests.cs  GeneratorTestKernel.cs  HardwareDetection.cs  HardwareMockFactory.cs  HardwareTestAttributes.cs  KernelArgumentsValidation.cs  README.md  TEST_INFRASTRUCTURE_CONSOLIDATION.md  TestCategories.cs  ci-test-configuration.md  ci-test.runsettings  coverage.editorconfig  coveragesettings.runsettings  coverlet.targets  enhanced-coverage.runsettings  global.json  hardware-only-test.runsettings  local-hardware-test.runsettings  run-tests.ps1  test-categories.props  validate-config.ps1
tools/: coverage-analyzer.sh  coverage-validator.cs  coverage-validator.csproj
(+5917 files in other folders)
